--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -81,7 +81,7 @@ jobs:
       - name: package
         id: package      
         env:
-          archiveName: ${{ matrix.qt_arch }}-${{ github.ref_name }}.${{ steps.vars.outputs.sha_short }}-${{ steps.vars.outputs.release_time }}
+          archiveName: Capture2Text-${{ github.ref_name }}.${{ steps.vars.outputs.sha_short }}-${{ steps.vars.outputs.release_time }}
           msvcArch: ${{ matrix.msvc_arch }}
         shell: pwsh
         run: |
@@ -105,7 +105,7 @@ jobs:
             branch:               ${{ github.ref_name }}
             commit:               ${{ steps.vars.outputs.sha_short }} 
             Qt version:           ${{ matrix.qt_ver }} ${{ matrix.qt_arch }}
-            Windows built with:   msvc64  Visual studio 2019
-            AppImage built with:  Ubuntu-20.04 ,latest gcc
+            Windows   built with:  MSVC-64  Visual studio 2019
+            AppImage  built with:  Ubuntu-20.04 ,latest gcc ,built with english ocr .if you want other `Language` ,build by yourself following steps.
 
             This is a prerelease version ,auto build by github action. use on your on risk:-)
