--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,4 +1,4 @@
-name: Ubuntu
+name: mac
 concurrency: 
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -20,43 +20,48 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04]
+        os: [macos-10.15,macos-11.0]
         qt_ver: [5.15.2]
-        qt_arch: [gcc_64]
+        qt_arch: [clang_64]
     steps:
+      - name: prepare env
+        if: ${{ matrix.os == 'macos-11.0' }}
+        run: |
+          softwareupdate --all --install --force
+          sudo xcode-select --print-path
+          sudo xcode-select --switch /Library/Developer/CommandLineTools    
       - name: Install Qt
         uses: jurplel/install-qt-action@v2.13.0
         with:
           version: ${{ matrix.qt_ver }}
           cached: 'false'
           modules: qttexttospeech
-      - name: ubuntu install thirdparty dependencies
+      - name: install thirdparty dependencies
         run: |
-          sudo apt-get install git pkg-config build-essential qt5-qmake 
-          sudo apt-get install libtesseract-dev qtbase5-dev qt5-default libleptonica-dev libqt5texttospeech5-dev  qtspeech5-speechd-plugin libspeechd-dev
-          sudo ln -sf /usr/bin/x86_64-linux-gnu-ld.gold /usr/bin/ld
+          brew remove tesseract
+          brew remove leptonica
+          brew install tesseract leptonica
+          brew install create-dmg
       - uses: actions/checkout@v2
         with:
           fetch-depth: 1
 
       - name: build Capture2Text
         run: |
-          qmake CONFIG+=release PREFIX=/usr 
-          make INSTALL_ROOT=appdir -j`nproc` install; find appdir/
-          wget "https://github.com/GSam/Capture2Text/releases/download/Prototype/English.zip"
-          unzip -o "English.zip" -d "appdir/usr/bin/tessdata"
-          cp Capture2Text.png appdir/
+          qmake CONFIG+=release
+          make  -j`nproc` 
       - name: Build AppImage
         run: |
-          wget -c -nv "https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage"
-          chmod a+x linuxdeploy-plugin-qt-x86_64.AppImage
-          wget -c -nv "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage"
-          chmod a+x linuxdeploy-x86_64.AppImage
-          ./linuxdeploy-x86_64.AppImage --appdir appdir --output appimage --plugin qt -i Capture2Text.png -d Capture2Text.desktop
+          macdeployqt Capture2Text.app -qmldir=. -verbose=1
+          codesign --force --deep -s - Capture2Text.app
+          mkdir tmp
+          mv Capture2Text.app ./tmp
+          create-dmg --volname "Capture2Text Installer" --volicon "Capture2Text.ico" --window-pos 200 120 --window-size 800 400 --icon-size 100 --icon "Capture2Text.app" 200 190 --hide-extension "Capture2Text.app" --app-drop-link 600 185 --skip-jenkins "Capture2Text.dmg" tmp/
+      
       - uses: actions/upload-artifact@v2
         with:
-          name: AppImage
-          path: './*.AppImage*'
+          name: dmg
+          path: './*.dmg*'
       - name: Set outputs
         id: vars
         run: |
@@ -64,13 +69,13 @@ jobs:
           echo "::set-output name=release_date::$(date +'%Y%m%d')"    
           echo "::set-output name=release_time::$(date +'%H%M%S')"  
           echo "::set-output name=release_time_clock::$(date +'%H:%M:%S')"    
-          echo "::set-output name=appname::$(ls *.AppImage*)"
+          echo "::set-output name=appname::$(ls *.dmg*)"
       - name: uploadRelease
         # if: startsWith(github.event.ref, 'refs/tags/')
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ steps.vars.outputs.appname }}
+          file: Capture2Text.dmg
           asset_name: ${{ steps.vars.outputs.appname }}
           tag: prerelease-${{steps.vars.outputs.release_date}}
           overwrite: true 
@@ -81,7 +86,7 @@ jobs:
             branch:               ${{ github.ref_name }}
             commit:               ${{ steps.vars.outputs.sha_short }} 
             Qt version:           ${{ matrix.qt_ver }} ${{ matrix.qt_arch }}
-            Windows   built with:  MSVC-64  Visual studio 2019
-            AppImage  built with:  Ubuntu-20.04 ,latest gcc ,built with english ocr .if you want other `Language` ,build by yourself following steps.
+            Windows built with:   msvc64  Visual studio 2019
+            AppImage built with:  Ubuntu-20.04 ,latest gcc
             
             This is a prerelease version ,auto build by github action. use on your on risk:-)
